Added a bunch of new properties to the Calendar component: - "showNavigatorMonth": Whether or not to display the Month in the navigator header on top of the calendar. - "showNavigatorYear": Whether or not to display the Year in the navigator header on top of the calendar. - "navigatorPrevIcon": Use this React DOMNode as the Icon/Previous button. - "navigatorNextIcon": Use this React DOMNode as the Icon/Next button. - "showWeekNumbers": Whether or not to display Weeknumbers. - "showMonthName": Whether or not to display the Month name. - "showWeekDays": Whether or not to display weekday names.
And modifications to some properties:
- "months": Modified behaviour to make the forward/backward button move X amount of months forward based on the value in the "months" property, instead of only 1 month at a time.
- "direction": Added new available value "wrap". This will give a natural flow of months from left to right, and wrap to next line if there is no more available space.

--- a/src/components/DayCell/index.scss
+++ b/src/components/DayCell/index.scss
@@ -4,6 +4,10 @@
   position: relative;
   font: inherit;
   cursor: pointer;
+
+  .rdrWeekNumbers & {
+      width: calc(100% / 8);
+  }
 }
 
 .rdrDayNumber {
